--- a/SunChaser/app/src/main/AndroidManifest.xml
+++ b/SunChaser/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".HomeFeature.MainActivity"/>
+        <activity android:name=".homeFeature.view.activitiesView.HomeView"/>
     </application>
 
 </manifest>
