--- a/SunChaser/app/src/main/AndroidManifest.xml
+++ b/SunChaser/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
 
         <activity android:name=".homeFeature.view.activitiesView.HomeView"/>
+         <activity android:name=".mapFeature.view.activitiesview.MapActivity"/>
     </application>
 
 </manifest>
