--- a/SunChaser/app/src/main/AndroidManifest.xml
+++ b/SunChaser/app/src/main/AndroidManifest.xml
@@ -2,9 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE"/>
 
     <application
         android:allowBackup="true"
@@ -16,6 +20,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SunChaser"
         tools:targetApi="31">
+
+        <receiver
+            android:name=".alertFeature.viewmodel.AlertReceiver"
+            android:enabled="true"
+            android:exported="false"/>
+
+        <service
+            android:name=".alertFeature.viewmodel.AlertService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="specialUse"/>
+
         <activity
             android:name=".splashFeature.view.SplashActivity"
             android:exported="true">
@@ -24,10 +40,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".homeFeature.view.activitiesView.HomeView"/>
-         <activity android:name=".mapFeature.view.activitiesview.MapActivity"/>
-        <activity android:name=".favoriteFeature.view.activitiesView.FavoriteView"/>
+        <activity android:name=".homeFeature.view.activitiesView.HomeView" />
+        <activity android:name=".mapFeature.view.activitiesview.MapActivity" />
+        <activity android:name=".favoriteFeature.view.activitiesView.FavoriteView" />
+        <activity android:name=".alertFeature.view.activitiesView.AlertView" />
     </application>
 
 </manifest>
